samples/_failures_safe/1761075961_e9521a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7af569b8.c: In function ‘main’:
./samples/SAFE/__tmp_7af569b8.c:155:21: error: expected declaration or statement at end of input
  155 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_7af569b8.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7af569b8.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7af569b8.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7af569b8.c:155:21: error: expected declaration or statement at end of input
